--- a/app/src/main/res/layout/activity_juego_pasaportes.xml
+++ b/app/src/main/res/layout/activity_juego_pasaportes.xml
@@ -415,7 +415,7 @@
         android:id="@+id/ivPortafolio"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -423,7 +423,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/portafolio"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/btVolver"
