--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -78,7 +78,7 @@
         android:layout_height="0dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="Cambiar duracion modo pasaportes (s)"
+        android:text="Cambiar duración modo pasaportes (s)"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="13sp"
@@ -181,7 +181,7 @@
         android:layout_height="0dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="Borrar records"
+        android:text="Borrar récords"
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="24sp"
